welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value hauteur
  for (pas <- 0 to hauteur-1) {
                   ^Array1:13: error: not found: value hauteur
    for (i <- 0 to hauteur) {
                   ^Array1:14: error: not found: value T
      setCouleurBrosse(T((i+1)%hauteur))
                       ^Array1:18: error: not found: value hauteur
    for (i <- 0 to hauteur) {
                   ^